# docugenius-cli

./: .docugenius.json  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
src/docugenius/: __init__.py  cli.py  config.py  converter.py  image_extractor.py  utils.py
